@@ -140,6 +140,8 @@ t/bin/bsub
 t/bin/dodo/machine-location
 t/bin/machine-location
 t/bin/red/machine-location
+t/data/no_reads.cram
+t/data/eight_reads.cram
 t/data/bam_flagstats/1234_1_bam_flagstats.json
 t/data/bam_flagstats/1234_3_bam_flagstats.json
 t/data/bam_flagstats/1234_3_phix_bam_flagstats.json
